[tool.poetry]
name = "app-tasks"
version = "0.1.0"
description = ""
authors = ["b.sabirov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
